# KurvotSP

./: .gitignore  .qmlls.ini  CMakeLists.txt  README.md  compositor.conf
protocols/: wlr-layer-shell-unstable-v1.xml
src/: Clock.cpp  Clock.hpp  ConfigManager.cpp  ConfigManager.hpp  ProcessManager.cpp  ProcessManager.hpp  compositormodel.cpp  compositormodel.hpp  launcher.cpp  launcher.h  loger.hpp  main.cpp
src/QmlSource/: Background.qml  ButtonsContainerBackground.qml  Chrome.qml  CompositorBackgraund.qml  CompositorScreen.qml  Main.qml  RebootButtom.qml  ShotdownButton.qml  TitleBar.qml
